--- a/assets/style/subfolder/alumni.css
+++ b/assets/style/subfolder/alumni.css
@@ -62,11 +62,15 @@ tr {
         display: flex;
         justify-content: center;
         
-        font-size: 20px;
+        font-size: 40px;
         background-color: #bd3030ee;
         word-spacing: 2px;
         letter-spacing: 1.5px;
         
+    }
+
+    thead tr {
+        font-size: 20px;
     }
     
     .my-custom-scrollbar {
@@ -92,7 +96,7 @@ tr {
         display: flex;
         justify-content: center;
         padding: 15px;
-        font-size: 20px;
+        font-size: 10px;
     }
         
 }
